[package]
name = "timsseek_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

# rustyms is patched (see workspace Cargo.toml `[patch.crates-io]` + patches/)
# to drop the 60MB gnome.dat glycan database we don't use. Fresh-clone setup:
#     cargo install patch-crate && cargo patch-crate
# This extracts rustyms into target/patch/ and applies patches/rustyms+0.11.0.patch.
# Can't use build.rs automation: patch-crate depends on `cargo = "0.96"` which
# pulls libsqlite3-sys 0.36; timsrust pins rusqlite 0.37→libsqlite3-sys 0.35,
# and both declare `links = "sqlite3"` → cargo rejects.
[package.metadata.patch]
crates = ["rustyms"]

[dependencies]
timsseek = { path = "../timsseek", default-features = false }
timsquery = { path = "../timsquery" }
timscentroid = { path = "../timscentroid" }
tims_stage = { path = "../tims_stage" }
alloc_track = { path = "../alloc_track" }
tempfile = { workspace = true }

regex = "1.11.1"
# tracing-profile = { version="0.10.11",features=["perfetto"] }
tracing-profile = { git = "https://github.com/jspaezp/tracing-profile.git" , branch = "feat/aggregate_common", optional = true }

# Workspace-inherited deps
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
rayon = { workspace = true }
indicatif = { workspace = true }
timsrust = { workspace = true }

[[bin]]
name = "timsseek"
path = "src/main.rs"

[[bin]]
name = "timsseek_sample_speclib"
path = "src/sample_speclib.rs"

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true, features = ["secure"] }

[features]
default = ["parallel", "aws"]
parallel = ["timsseek/rayon"]
instrumentation = ["timsseek/instrumentation", "tracing-profile"]
track-alloc = ["alloc_track/enabled"]
# S3 is default (see above). GCS/Azure stay opt-in — add when actually needed.
aws = ["tims_stage/aws", "timscentroid/aws"]
gcp = ["tims_stage/gcp", "timscentroid/gcp"]
azure = ["tims_stage/azure", "timscentroid/azure"]
