[package]
name = "timsseek_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
timsseek = { path = "../timsseek", default-features = false }
timsquery = { path = "../timsquery" }
timscentroid = { path = "../timscentroid" }
tims_stage = { path = "../tims_stage" }
alloc_track = { path = "../alloc_track" }
tempfile = { workspace = true }

regex = "1.11.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# tracing-profile = { version="0.10.11",features=["perfetto"] }
tracing-profile = { git = "https://github.com/jspaezp/tracing-profile.git" , branch = "feat/aggregate_common", optional = true }

# Workspace-inherited deps
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
rayon = { workspace = true }
indicatif = { workspace = true }
timsrust = { workspace = true }

[[bin]]
name = "timsseek"
path = "src/main.rs"

[[bin]]
name = "timsseek_sample_speclib"
path = "src/sample_speclib.rs"

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true, features = ["secure"] }

[features]
default = ["parallel", "aws", "mzdata"]
parallel = ["timsseek/rayon"]
instrumentation = ["timsseek/instrumentation", "tracing-profile"]
track-alloc = ["alloc_track/enabled"]
# S3 is default (see above). GCS/Azure stay opt-in — add when actually needed.
aws = ["tims_stage/aws", "timscentroid/aws"]
gcp = ["tims_stage/gcp", "timscentroid/gcp"]
azure = ["tims_stage/azure", "timscentroid/azure"]
# mzML/mzdata ingest (open-format raw input). On by default; drop with
# `--no-default-features`.
mzdata = ["timsseek/mzdata"]
