[package]
name = "timsseek_rts"
version = "0.19.0"
edition = "2021"

[dependencies]
timsseek = { path = "../timsseek" }
timsquery = { path = "../timsquery" }
tracing-bunyan-formatter = "0.3.10"

regex = "1.10.6"
csv = "1.3.0"

# Workspace-inherited deps
timsrust = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "registry",
  "env-filter",
] }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
clap = { workspace = true, features = ["derive"] }
indicatif = { workspace = true }

[[bin]]
name = "timsseek_rts"
path = "src/main.rs"

