[package]
name = "timsseek_rts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
timsseek = { path = "../timsseek" }
timsquery = { path = "../timsquery" }

regex = "1.10.6"

# Workspace-inherited deps
timsrust = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "registry",
  "env-filter",
] }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[[bin]]
name = "timsseek_rts"
path = "src/main.rs"

