[project]
name = "hello-world"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
description = "Add your description here"
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "matplotlib",
    "requests",
    "speclib_builder[ml]",
]

[tool.uv.sources]
speclib_builder = { path = "../../speclib_builder" }